[gd_scene load_steps=3 format=3 uid="uid://ci5ewx2p5jj8"]

[ext_resource type="PackedScene" uid="uid://33pdafjatw6d" path="res://scenes/button.tscn" id="1_gei3w"]
[ext_resource type="Script" path="res://scripts/panel_a.gd" id="1_lwoqv"]

[node name="Node3D" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.248, 0)
script = ExtResource("1_lwoqv")

[node name="Button1" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, -0.28, 0, -0.131)

[node name="Button2" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, -0.14, 0, -0.131)

[node name="Button3" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.131)

[node name="Button4" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 1, 0.14, 0, -0.131)

[node name="Button5" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(0.499243, 0, 0, 0, 0.998487, 0, 0, 0, 0.998487, 0.28, 0, -0.131)

[node name="Button6" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(1.9, 0, 0, 0, 1, 0, 0, 0, 1.011, -0.13791, 0, 0.131)

[node name="Button7" parent="." instance=ExtResource("1_gei3w")]
transform = Transform3D(1.2, 0, 0, 0, 1, 0, 0, 0, 1.011, 0.21, 0, 0.131)
